# invicofapy

./: .gitignore  pyproject.toml  run.py
scripts/: create_super_user.py
src/: .env.example  main.py
src/analisis/handlers/: __init__.py  icaro_imports.py  sgf_imports.py  sgv_imports.py  siif_imports.py  slave_imports.py  sscc_imports.py
src/analisis/repositories/: control_aporte_empresario.py  control_banco.py  control_debitos_bancarios.py  control_deuda_flotante.py  control_escribanos.py  control_haberes.py  control_honorarios.py  control_icaro_vs_siif.py  control_obras.py  control_recursos.py  control_viaticos.py  icaro_vs_siif.py  reporte_formulacion_presupuesto.py  reporte_modulos_basicos.py
src/analisis/routes/: __init__.py  control_aporte_empresario.py  control_banco.py  control_completo.py  control_debitos_bancarios.py  control_deuda_flotante.py  control_escribanos.py  control_haberes.py  control_honorarios.py  control_icaro_vs_siif.py  control_obras.py  control_recursos.py  control_viaticos.py  icaro_vs_siif.py  reporte_ejecucion_gastos.py  reporte_ejecucion_obras.py  reporte_formulacion_presupuesto.py  reporte_libro_diario.py  reporte_listado_obras.py  reporte_planillometro.py  reporte_planillometro_contabilidad.py  reporte_remanente.py
src/analisis/schemas/: control_aporte_empresario.py  control_banco.py  control_completo.py  control_debitos_bancarios.py  control_deuda_flotante.py  control_escribanos.py  control_haberes.py  control_honorarios.py  control_icaro_vs_siif.py  control_obras.py  control_recursos.py  control_viaticos.py  reporte_ejecucion_gastos.py  reporte_ejecucion_obras.py  reporte_formulacion_presupuesto.py  reporte_libro_diario.py  reporte_listado_obras.py  reporte_modulos_basicos.py  reporte_planillometro.py  reporte_planillometro_contabilidad.py  reporte_remanente.py
src/analisis/services/: __init__.py  control_banco.py  (+22 more)
src/config/: __base_config.py  database.py
src/siif/: main.py
src/utils/: __init__.py  alias_generator.py  google_sheets.py  handling_files.py  hangling_path.py  query_filter.py  safe_get.py  validate.py
templates/: argparse.py
tests/: pytest.ini
tests/siif/: conftest.py  test_connect.py  test_rf602.py
(+207 files in other folders)
